Fixed navbar z-index and added heading to welcome

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,8 @@ html, body {
     border:1px solid #e7e7e7;
     box-shadow: 0px 0px 1px #cdcdcd;
     background-color: #fff;
-        }
+    z-index: 99999999999;
+}
 .navbar a {
     float: left;
     color: #cdcdcd;
@@ -18,7 +19,7 @@ html, body {
     padding: 14px 16px;
     text-decoration: inherit;
     font-size: 20px;
-          }
+}
 .navbar a:hover {
     font-weight: bold;
 }
@@ -47,7 +48,7 @@ html, body {
     padding: 0;
     margin: 0;
     display: block;
-    padding-top:50px;
+    padding-top:40px;
 }
 .row {
     width: 100%;
@@ -59,8 +60,15 @@ html, body {
     width: 100%;
     height: 600px;
     display: block;
-    background-position: fixed;
+    background-attachment: fixed;
     background-image:url('../images/backgrounds/welcome1.jpg');
     background-repeat: no-repeat;
     background-size: cover;
+}
+#welcome>div>h1 {
+    color: #fff9f2;
+    margin: 10px;
+    position: absolute;
+    top:60px;
+    left: 50px;
 }
